[package]
name = "cgt_rust"
version = "0.1.0"

authors = [
    "Joel Hellewell <joel@ebi.ac.uk>",
    "John Lees <jlees@ebi.ac.uk>",
    "Samuel Horsfield <shorsfield@ebi.ac.uk>",
    "Johanna von Wachsmann <wachsmannj@ebi.ac.uk>"
]
edition = "2021"
description = "Label core and rare genes in pangenome dataa"
repository = "https://github.com/bacpop/cgt"
homepage = "https://bacpop.org/software/"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE",
    "/src",
    "/tests"
]
keywords = ["bioinformatics", "genomics", "sequencing", "pangenome"]
categories = ["command-line-utilities", "science"]

[dependencies]
statrs = "0.16"
clap = { version = "4.0.27", features = ["derive"] }
rand = "0.8.5"
indicatif = "0.17.7"